<resources>
    <string name="app_name">EasyProjectAndroid</string>
    <string name="action_settings">Settings</string>

    <!--  Res->menu-> Left menu-->
    <string name="new_project">New project</string>
    <string name="my_projects">My projects</string>
    <string name="my_tasks">My tasks</string>
    <string name="logout">Log out</string>
    <string name="options">Options</string>
    <string name="preference_file_key">SharedPreferences</string>

    <!--  menu info task-->
    <string name="action_visualizeTask">View</string>
    <string name="action_editTask">Edit</string>
    <string name="action_deleteTask">Delete</string>

    <!-- drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new_project">NewProjectActivity</string>
    <string name="titleNewProject">New project</string>
    <string name="save">Save</string>

    <!-- content_new_project -->
    <string name="project_name">Project name</string>
    <string name="project_description">Project description</string>
    <string name="project_members">Project members</string>
    <string name="title_activity_view_project">ViewProjectActivity</string>

    <!-- content_new_task -->
    <string name="task_name">Task name</string>
    <string name="task_description">Task description</string>
    <string name="task_duration">Task duration</string>
    <string name="Taskmembers">Task members</string>
    <string-array name="status_arrays">
        <item>@string/to_do</item>
        <item>@string/doing</item>
        <item>@string/done</item>
    </string-array>


    <!--ViewprojectActivity-->
    <string name="to_do">to do</string>
    <string name="doing">doing</string>
    <string name="done">done</string>
    <string name="ic_action_chat">Chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Login-->
    <string name="title_activity_login">Login</string>
    <string name="title_activity_new_task">New Task</string>
    <string name="about">Manage your projects easily</string>

    <!-- Server DATA -->
    <string name="server_ip">http://192.168.1.139:8080</string>
    <string name="server_path">/EasyProject_RestFull/webresources/</string>
    <string name="websocket">ws://192.168.1.139:8080/EasyProject-war/actions/</string>

    <!--edit project-->
    <string name="edit">Edit</string>
    <string name="newmembers">Add new project members</string>
    <string name="deletemembers">Remove project members</string>

    <!--menu info project -->
    <string name="action_editProject">Edit project</string>
    <string name="action_deleteProject">Delete project</string>
    <string name="action_visualizeProject">Project details</string>

    <!-- info project details -->
    <string name="numTasks">Tasks number: </string>


    <string name="confirmation">Confirmation</string>
    <string name="accept">Yes</string>
    <string name="cancel">No</string>

    <!-- com/example/inftel07/myapplication(JAVA) -> ViewProduct -->
    <string name="emailClient">Choose an application to send the e-mail</string>
    <string name="questionDelete">Do you really want to delete</string>

    <!--edit task-->
    <string name="title_activity_info_task">infoTask</string>
    <string name="task_members">Task members</string>
    <string name="task_status">Task status</string>
    <string name="newmemberstask">Add new task members</string>

    <!-- ChatActivity -->
    <string name="title_activity_chat">ChatActivity</string>
    <string name="write_message">Write a message...</string>
    <string name="title_activity_view_project_activity_new">ViewProjectActivityNew</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_view_project_activity_tab">ViewProjectActivityTab</string>
    <string name="title_activity_view_project_tab">ViewProjectTabActivity</string>


</resources>
