<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.InfoProjectActivity"
    tools:showIn="@layout/activity_edit__project">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/linearLayoutEdit">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_name"
            android:textStyle="bold"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_editNameProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_editnameProject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/project_description"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/info_margin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_editprojectDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/info_margin"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_editprojectDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="textMultiLine"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/newmembers"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/info_margin"/>

        <MultiAutoCompleteTextView
            android:id="@+id/editMultiAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deletemembers"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/info_margin"/>

        <android.support.v7.widget.RecyclerView
            android:layout_marginTop="@dimen/info_margin"
            android:id="@+id/projectEditRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="none" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:onClick="edit"
        android:id="@+id/buttonEditProject"
        android:background="@color/primary"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/linearLayoutEdit" />


</RelativeLayout>